force-app/main/default/objects/AOB_Field__c/AOB_Field__c.object-meta.xml
<CustomObject>
    <label>Screen Field</label>
    <nameField>
        <label>AOB_Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screen Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>