force-app/main/default/objects/AOB_Field__c/fields/AOB_childShowingValue__c.field-meta.xml
<CustomField>
    <fullName>AOB_childShowingValue__c</fullName>
    <description>When this value is selected child fields should be visible ( Valid only for comboboxes and Radio buttons)</description>
    <inlineHelpText>When this value is selected child fields should be visible ( Valid only for comboboxes and Radio buttons)</inlineHelpText>
    <label>child Showing Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>