force-app/main/default/objects/AOB_Field__c/fields/AOB_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>AOB_ErrorMessage__c</fullName>
    <inlineHelpText>What Message should be shown in case this field isn&apos;t filled</inlineHelpText>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>