force-app/main/default/objects/AOB_Field__c/fields/AOB_HelpText__c.field-meta.xml
<CustomField>
    <fullName>AOB_HelpText__c</fullName>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>