force-app/main/default/objects/AOB_Field__c/fields/AOB_Image__c.field-meta.xml
<CustomField>
    <fullName>AOB_Image__c</fullName>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>