force-app/main/default/objects/AOB_Field__c/fields/AOB_Label__c.field-meta.xml
<CustomField>
    <fullName>AOB_Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>