force-app/main/default/objects/AOB_Field__c/fields/AOB_MaxSelected__c.field-meta.xml
<CustomField>
    <fullName>AOB_MaxSelected__c</fullName>
    <label>Max Number Of Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>