force-app/main/default/objects/AOB_Field__c/fields/AOB_MRITable__c.field-meta.xml
<CustomField>
    <fullName>AOB_MRITable__c</fullName>
    <label>MRI Table</label>
    <length>255</length>
    <type>Text</type>
</CustomField>