force-app/main/default/objects/AOB_Field__c/fields/AOB_Parent__c.field-meta.xml
<CustomField>
    <fullName>AOB_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Field</label>
    <referenceTo>AOB_Field__c</referenceTo>
    <relationshipLabel>Screen Fields</relationshipLabel>
    <relationshipName>Child_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>