force-app/main/default/objects/AOB_Field__c/fields/AOB_ParentControllingValue__c.field-meta.xml
<CustomField>
    <fullName>AOB_ParentControllingValue__c</fullName>
    <label>Parent controlling value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>