force-app/main/default/objects/AOB_Field__c/fields/AOB_pattern__c.field-meta.xml
<CustomField>
    <fullName>AOB_pattern__c</fullName>
    <inlineHelpText>if applicable, put the regex for validating this field</inlineHelpText>
    <label>pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>