force-app/main/default/objects/AOB_Field__c/fields/AOB_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>AOB_Placeholder__c</fullName>
    <description>Indicate what text to show as a placeholder</description>
    <inlineHelpText>Indicate what text to show as a placeholder</inlineHelpText>
    <label>Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>