force-app/main/default/objects/AOB_Field__c/fields/AOB_Required__c.field-meta.xml
<CustomField>
    <fullName>AOB_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is required ?</label>
    <type>Checkbox</type>
</CustomField>