force-app/main/default/objects/AOB_Field__c/fields/AOB_Section__c.field-meta.xml
<CustomField>
    <fullName>AOB_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>AOB_ScreenSection__c</referenceTo>
    <relationshipLabel>Fields</relationshipLabel>
    <relationshipName>Fields</relationshipName>
    <type>Lookup</type>
</CustomField>