force-app/main/default/objects/AOB_Field__c/fields/AOB_sequence__c.field-meta.xml
<CustomField>
    <fullName>AOB_sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>