force-app/main/default/objects/AOB_Field__c/fields/AOB_SFField__c.field-meta.xml
<CustomField>
    <fullName>AOB_SFField__c</fullName>
    <inlineHelpText>Indicate which Application field this value should be retrieved from</inlineHelpText>
    <label>Salesforce Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>