force-app/main/default/objects/AOB_Field__c/fields/AOB_Type__c.field-meta.xml
<CustomField>
    <fullName>AOB_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Combobox</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>MultiSelectSearch</fullName>
            </value>
            <value>
                <fullName>Empty</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Output</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>